# buch-beispiele

./: .gitignore  README.md
Kapitel01/: README.md
Kapitel02/: README.md
Kapitel03/: README.md
Kapitel04/: README.md
Kapitel05/: README.md
Kapitel05/formate_py/: arrow_format.py  avro_format.py  daten.json  daten.jsonl  kunden.csv  pandas_df_csv.py  pandas_df_json.py  (+4 more)
Kapitel06/: README.md
Kapitel07/: README.md
Kapitel08/: README.md
Kapitel09/: README.md
Kapitel10/: README.md
Kapitel11/: README.md
Kapitel11/s3_lake_py/: README.md  delete_delta_lakehouse.py  docker-compose.yml  duckdb_s3_example.py  duckdb_s3_partitioning.py  initial_delta_lakehouse.py  merge_delta_lakehouse.py  pandas_plot.py  pandas_s3_example.py  pyproject.toml  timetravel_delta_lakehouse.py  update_data_boto_client.py  update_data_boto_client_metadaten_tags.py  update_data_minio_client.py
Kapitel12/: README.md
Kapitel13/: README.md
Kapitel14/: README.md
Kapitel15/: README.md
Kapitel16/: README.md
Kapitel17/: README.md
Kapitel18/: README.md
Kapitel18/function_rag_agent_py/: README.md  pyproject.toml
Kapitel18/function_rag_agent_py/agent/: zuwachs.py
Kapitel18/function_rag_agent_py/function_calling/clock/: call.py
Kapitel18/function_rag_agent_py/function_calling/csv/: call_csv.py
Kapitel18/function_rag_agent_py/rag/: bigdata.md  rag_faiss.py  rag_faiss_openai.py
Kapitel18/mcp_py/: README.md  pyproject.toml
Kapitel18/mcp_py/calculator/: calc_client.py  calc_server.py
Kapitel18/mcp_py/superstore/: analyze.py  convert.py  sql_client.py  sql_server.py
(+81 files in other folders)
