[project]
name = "bdb-s3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.11",
    "deltalake>=1.1.4",
    "duckdb>=1.3.2",
    "matplotlib>=3.10.6",
    "minio>=7.2.16",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "s3fs>=2025.9.0",
]
